commit fixed a slight layout issue and added timestamp to leaderboard entries

--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -489,7 +489,7 @@ footer {
     align-items: center;
     justify-content: center;
     margin-top: 3px;
-    margin-left: 2px;
+    margin-left: 1px;
     width: 25px;
     height:25px;
     transition: 500ms;
